Description
In working on some problems with Time Zone adjustments in ReactOS I found that the RtlQueryTimeZoneInformation function is partially broken and wrote an apitest to capture the failures. Hopefully this can be included in the rostests. I have a WIP solution as well to follow later.
GetTimeZoneInfo3.cpp and gtzi3.exe are attached here. Did not show up on search, so add to description.
Attachments
Issue Links
- blocks
- 
                    CORE-13001 Cannot assign the server time synchronization. -         
- Resolved
 
-         
- is duplicated by
- 
                    CORE-11033 ReactOS does not change to DST automatically. -         
- Resolved
 
-         
- 
                    CORE-16931 Wrong time reported while NTP update successfully done -         
- Resolved
 
-         



